fixed css issue on mobile

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -94,7 +94,7 @@ h1.big-header-text {
 ul.inline {display: inline}
 ul.right {float:right}
 ul.pad-top {margin-top: 10px}
-ul.title-area {height: 100% }
+
 .icon-link {margin-right: 10px}
 
 table.display { border-spacing: 0px }
